[package]
name = "dodocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
do-sdk = { git = "https://github.com/EluvK/do-sdk", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.9"
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.21", features = ["full"] }
uuid = { version = "1.6", features = ["v4"] }
